y.output
Terminals which are not used

   NOT_OP
   XOR_OP
   MUL_OP
   DIV_OP
   ADD_OP
   SUB_OP
   MOD_OP
   DEF
   UNARY


State 18 conflicts: 10 shift/reduce
State 245 conflicts: 1 shift/reduce


Grammar

    0 $accept: start_state $end

    1 statement: compound_statement
    2          | expression_statement
    3          | iteration_statement
    4          | jump_statement
    5          | selection_statement

    6 compound_statement: '{' '}'
    7                   | '{' statement_list '}'
    8                   | '{' declaration_list '}'
    9                   | '{' declaration_list statement_list '}'

   10 declaration_list: declaration
   11                 | declaration_list declaration

   12 statement_list: statement
   13               | statement_list statement

   14 expression_statement: ';'
   15                     | expression ';'

   16 selection_statement: IF '(' expression ')' statement
   17                    | IF '(' expression ')' statement ELSE statement

   18 iteration_statement: WHILE '(' expression ')' statement
   19                    | FOR '(' expression_statement expression_statement ')' statement
   20                    | FOR '(' expression_statement expression_statement expression ')' statement

   21 jump_statement: CONTINUE ';'
   22               | BREAK ';'
   23               | RETURN ';'
   24               | RETURN expression ';'

   25 function_definition: declaration_specifiers declarator declaration_list compound_statement
   26                    | declaration_specifiers declarator compound_statement
   27                    | declarator declaration_list compound_statement
   28                    | declarator compound_statement

   29 start_state: global_declaration
   30            | start_state global_declaration

   31 global_declaration: function_definition
   32                   | declaration

   33 primary_expression: IDENTIFIER
   34                   | CONST_FLOAT
   35                   | CONST_INT
   36                   | CONST_CHAR
   37                   | STRING_LITERAL
   38                   | '(' expression ')'

   39 postfix_expression: primary_expression
   40                   | postfix_expression '[' expression ']'
   41                   | postfix_expression '(' ')'
   42                   | postfix_expression '(' argument_expression_list ')'
   43                   | postfix_expression '.' IDENTIFIER
   44                   | postfix_expression INC_OP
   45                   | postfix_expression DEC_OP

   46 argument_expression_list: assignment_expression
   47                         | argument_expression_list ',' assignment_expression

   48 unary_expression: postfix_expression
   49                 | INC_OP unary_expression
   50                 | DEC_OP unary_expression
   51                 | unary_operator cast_expression
   52                 | SIZEOF unary_expression
   53                 | SIZEOF '(' type_name ')'

   54 unary_operator: '&'
   55               | '*'
   56               | '+'
   57               | '-'
   58               | '~'
   59               | '!'

   60 cast_expression: unary_expression
   61                | '(' type_name ')' cast_expression

   62 multiplicative_expression: cast_expression
   63                          | multiplicative_expression '*' cast_expression
   64                          | multiplicative_expression '/' cast_expression
   65                          | multiplicative_expression '%' cast_expression

   66 additive_expression: multiplicative_expression
   67                    | additive_expression '+' multiplicative_expression
   68                    | additive_expression '-' multiplicative_expression

   69 shift_expression: additive_expression
   70                 | shift_expression LEFT_OP additive_expression
   71                 | shift_expression RIGHT_OP additive_expression

   72 relational_expression: shift_expression
   73                      | relational_expression '<' shift_expression
   74                      | relational_expression '>' shift_expression
   75                      | relational_expression LE_OP shift_expression
   76                      | relational_expression GE_OP shift_expression

   77 equality_expression: relational_expression
   78                    | equality_expression EQ_OP relational_expression
   79                    | equality_expression NE_OP relational_expression

   80 and_expression: equality_expression
   81               | and_expression '&' equality_expression

   82 exclusive_or_expression: and_expression
   83                        | exclusive_or_expression '^' and_expression

   84 inclusive_or_expression: exclusive_or_expression
   85                        | inclusive_or_expression '|' exclusive_or_expression

   86 logical_and_expression: inclusive_or_expression
   87                       | logical_and_expression AND_OP inclusive_or_expression

   88 logical_or_expression: logical_and_expression
   89                      | logical_or_expression OR_OP logical_and_expression

   90 conditional_expression: logical_or_expression
   91                       | logical_or_expression '?' expression ':' conditional_expression

   92 assignment_expression: conditional_expression
   93                      | unary_expression assignment_operator assignment_expression

   94 assignment_operator: '='
   95                    | MUL_ASSIGN
   96                    | DIV_ASSIGN
   97                    | MOD_ASSIGN
   98                    | ADD_ASSIGN
   99                    | SUB_ASSIGN
  100                    | LEFT_ASSIGN
  101                    | RIGHT_ASSIGN
  102                    | AND_ASSIGN
  103                    | XOR_ASSIGN
  104                    | OR_ASSIGN

  105 expression: assignment_expression
  106           | expression ',' assignment_expression

  107 constant_expression: conditional_expression

  108 declaration: declaration_specifiers init_declarator_list ';'

  109 declaration_specifiers: data_type
  110                       | data_type declaration_specifiers

  111 data_type: VOID
  112          | CHAR
  113          | SHORT
  114          | INT
  115          | LONG
  116          | FLOAT
  117          | SIGNED
  118          | UNSIGNED
  119          | STRUCT
  120          | UNION

  121 init_declarator_list: init_declarator
  122                     | init_declarator_list ',' init_declarator

  123 init_declarator: declarator
  124                | declarator '=' initializer

  125 specifier_qualifier_list: declaration_specifiers specifier_qualifier_list
  126                         | declaration_specifiers

  127 declarator: IDENTIFIER
  128           | '(' declarator ')'
  129           | declarator '[' constant_expression ']'
  130           | declarator '[' ']'
  131           | declarator '(' parameter_type_list ')'
  132           | declarator '(' identifier_list ')'
  133           | declarator '(' ')'

  134 parameter_type_list: parameter_list

  135 parameter_list: parameter_declaration
  136               | parameter_list ',' parameter_declaration

  137 parameter_declaration: declaration_specifiers declarator
  138                      | declaration_specifiers abstract_declarator
  139                      | declaration_specifiers

  140 identifier_list: IDENTIFIER
  141                | identifier_list ',' IDENTIFIER

  142 type_name: specifier_qualifier_list
  143          | specifier_qualifier_list abstract_declarator

  144 abstract_declarator: direct_abstract_declarator

  145 direct_abstract_declarator: '(' abstract_declarator ')'
  146                           | '[' ']'
  147                           | '[' constant_expression ']'
  148                           | direct_abstract_declarator '[' ']'
  149                           | direct_abstract_declarator '[' constant_expression ']'
  150                           | '(' ')'
  151                           | '(' parameter_type_list ')'
  152                           | direct_abstract_declarator '(' ')'
  153                           | direct_abstract_declarator '(' parameter_type_list ')'

  154 initializer: assignment_expression
  155            | '{' initializer_list '}'
  156            | '{' initializer_list ',' '}'

  157 initializer_list: initializer
  158                 | initializer_list ',' initializer


Terminals, with rules where they appear

$end (0) 0
'!' (33) 59
'%' (37) 65
'&' (38) 54 81
'(' (40) 16 17 18 19 20 38 41 42 53 61 128 131 132 133 145 150 151
    152 153
')' (41) 16 17 18 19 20 38 41 42 53 61 128 131 132 133 145 150 151
    152 153
'*' (42) 55 63
'+' (43) 56 67
',' (44) 47 106 122 136 141 156 158
'-' (45) 57 68
'.' (46) 43
'/' (47) 64
':' (58) 91
';' (59) 14 15 21 22 23 24 108
'<' (60) 73
'=' (61) 94 124
'>' (62) 74
'?' (63) 91
'[' (91) 40 129 130 146 147 148 149
']' (93) 40 129 130 146 147 148 149
'^' (94) 83
'{' (123) 6 7 8 9 155 156
'|' (124) 85
'}' (125) 6 7 8 9 155 156
'~' (126) 58
error (256)
IF (258) 16 17
ELSE (259) 17
WHILE (260) 18
FOR (261) 19 20
CONTINUE (262) 21
BREAK (263) 22
RETURN (264) 23 24
SIZEOF (265) 52 53
INC_OP (266) 44 49
DEC_OP (267) 45 50
LEFT_OP (268) 70
RIGHT_OP (269) 71
LE_OP (270) 75
GE_OP (271) 76
EQ_OP (272) 78
NE_OP (273) 79
AND_OP (274) 87
OR_OP (275) 89
NOT_OP (276)
XOR_OP (277)
MUL_OP (278)
DIV_OP (279)
ADD_OP (280)
SUB_OP (281)
MOD_OP (282)
MUL_ASSIGN (283) 95
DIV_ASSIGN (284) 96
MOD_ASSIGN (285) 97
ADD_ASSIGN (286) 98
LEFT_ASSIGN (287) 100
RIGHT_ASSIGN (288) 101
DEF (289)
SUB_ASSIGN (290) 99
AND_ASSIGN (291) 102
XOR_ASSIGN (292) 103
OR_ASSIGN (293) 104
INT (294) 114
FLOAT (295) 116
CHAR (296) 112
STRUCT (297) 119
UNION (298) 120
UNSIGNED (299) 118
SIGNED (300) 117
VOID (301) 111
LONG (302) 115
SHORT (303) 113
IDENTIFIER (304) 33 43 127 140 141
CONST_INT (305) 35
CONST_FLOAT (306) 34
STRING_LITERAL (307) 37
CONST_CHAR (308) 36
UNARY (309)


Nonterminals, with rules where they appear

$accept (79)
    on left: 0
statement (80)
    on left: 1 2 3 4 5, on right: 12 13 16 17 18 19 20
compound_statement (81)
    on left: 6 7 8 9, on right: 1 25 26 27 28
declaration_list (82)
    on left: 10 11, on right: 8 9 11 25 27
statement_list (83)
    on left: 12 13, on right: 7 9 13
expression_statement (84)
    on left: 14 15, on right: 2 19 20
selection_statement (85)
    on left: 16 17, on right: 5
iteration_statement (86)
    on left: 18 19 20, on right: 3
jump_statement (87)
    on left: 21 22 23 24, on right: 4
function_definition (88)
    on left: 25 26 27 28, on right: 31
start_state (89)
    on left: 29 30, on right: 0 30
global_declaration (90)
    on left: 31 32, on right: 29 30
primary_expression (91)
    on left: 33 34 35 36 37 38, on right: 39
postfix_expression (92)
    on left: 39 40 41 42 43 44 45, on right: 40 41 42 43 44 45 48
argument_expression_list (93)
    on left: 46 47, on right: 42 47
unary_expression (94)
    on left: 48 49 50 51 52 53, on right: 49 50 52 60 93
unary_operator (95)
    on left: 54 55 56 57 58 59, on right: 51
cast_expression (96)
    on left: 60 61, on right: 51 61 62 63 64 65
multiplicative_expression (97)
    on left: 62 63 64 65, on right: 63 64 65 66 67 68
additive_expression (98)
    on left: 66 67 68, on right: 67 68 69 70 71
shift_expression (99)
    on left: 69 70 71, on right: 70 71 72 73 74 75 76
relational_expression (100)
    on left: 72 73 74 75 76, on right: 73 74 75 76 77 78 79
equality_expression (101)
    on left: 77 78 79, on right: 78 79 80 81
and_expression (102)
    on left: 80 81, on right: 81 82 83
exclusive_or_expression (103)
    on left: 82 83, on right: 83 84 85
inclusive_or_expression (104)
    on left: 84 85, on right: 85 86 87
logical_and_expression (105)
    on left: 86 87, on right: 87 88 89
logical_or_expression (106)
    on left: 88 89, on right: 89 90 91
conditional_expression (107)
    on left: 90 91, on right: 91 92 107
assignment_expression (108)
    on left: 92 93, on right: 46 47 93 105 106 154
assignment_operator (109)
    on left: 94 95 96 97 98 99 100 101 102 103 104,
    on right: 93
expression (110)
    on left: 105 106, on right: 15 16 17 18 20 24 38 40 91 106
constant_expression (111)
    on left: 107, on right: 129 147 149
declaration (112)
    on left: 108, on right: 10 11 32
declaration_specifiers (113)
    on left: 109 110, on right: 25 26 108 110 125 126 137 138 139
data_type (114)
    on left: 111 112 113 114 115 116 117 118 119 120,
    on right: 109 110
init_declarator_list (115)
    on left: 121 122, on right: 108 122
init_declarator (116)
    on left: 123 124, on right: 121 122
specifier_qualifier_list (117)
    on left: 125 126, on right: 125 142 143
declarator (118)
    on left: 127 128 129 130 131 132 133, on right: 25 26 27 28 123
    124 128 129 130 131 132 133 137
parameter_type_list (119)
    on left: 134, on right: 131 151 153
parameter_list (120)
    on left: 135 136, on right: 134 136
parameter_declaration (121)
    on left: 137 138 139, on right: 135 136
identifier_list (122)
    on left: 140 141, on right: 132 141
type_name (123)
    on left: 142 143, on right: 53 61
abstract_declarator (124)
    on left: 144, on right: 138 143 145
direct_abstract_declarator (125)
    on left: 145 146 147 148 149 150 151 152 153, on right: 144 148
    149 152 153
initializer (126)
    on left: 154 155 156, on right: 124 157 158
initializer_list (127)
    on left: 157 158, on right: 155 156 158


state 0

    0 $accept: . start_state $end

    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRUCT      shift, and go to state 4
    UNION       shift, and go to state 5
    UNSIGNED    shift, and go to state 6
    SIGNED      shift, and go to state 7
    VOID        shift, and go to state 8
    LONG        shift, and go to state 9
    SHORT       shift, and go to state 10
    IDENTIFIER  shift, and go to state 11
    '('         shift, and go to state 12

    function_definition     go to state 13
    start_state             go to state 14
    global_declaration      go to state 15
    declaration             go to state 16
    declaration_specifiers  go to state 17
    data_type               go to state 18
    declarator              go to state 19


state 1

  114 data_type: INT .

    $default  reduce using rule 114 (data_type)


state 2

  116 data_type: FLOAT .

    $default  reduce using rule 116 (data_type)


state 3

  112 data_type: CHAR .

    $default  reduce using rule 112 (data_type)


state 4

  119 data_type: STRUCT .

    $default  reduce using rule 119 (data_type)


state 5

  120 data_type: UNION .

    $default  reduce using rule 120 (data_type)


state 6

  118 data_type: UNSIGNED .

    $default  reduce using rule 118 (data_type)


state 7

  117 data_type: SIGNED .

    $default  reduce using rule 117 (data_type)


state 8

  111 data_type: VOID .

    $default  reduce using rule 111 (data_type)


state 9

  115 data_type: LONG .

    $default  reduce using rule 115 (data_type)


state 10

  113 data_type: SHORT .

    $default  reduce using rule 113 (data_type)


state 11

  127 declarator: IDENTIFIER .

    $default  reduce using rule 127 (declarator)


state 12

  128 declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 11
    '('         shift, and go to state 12

    declarator  go to state 20


state 13

   31 global_declaration: function_definition .

    $default  reduce using rule 31 (global_declaration)


state 14

    0 $accept: start_state . $end
   30 start_state: start_state . global_declaration

    $end        shift, and go to state 21
    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRUCT      shift, and go to state 4
    UNION       shift, and go to state 5
    UNSIGNED    shift, and go to state 6
    SIGNED      shift, and go to state 7
    VOID        shift, and go to state 8
    LONG        shift, and go to state 9
    SHORT       shift, and go to state 10
    IDENTIFIER  shift, and go to state 11
    '('         shift, and go to state 12

    function_definition     go to state 13
    global_declaration      go to state 22
    declaration             go to state 16
    declaration_specifiers  go to state 17
    data_type               go to state 18
    declarator              go to state 19


state 15

   29 start_state: global_declaration .

    $default  reduce using rule 29 (start_state)


state 16

   32 global_declaration: declaration .

    $default  reduce using rule 32 (global_declaration)


state 17

   25 function_definition: declaration_specifiers . declarator declaration_list compound_statement
   26                    | declaration_specifiers . declarator compound_statement
  108 declaration: declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 11
    '('         shift, and go to state 12

    init_declarator_list  go to state 23
    init_declarator       go to state 24
    declarator            go to state 25


state 18

  109 declaration_specifiers: data_type .
  110                       | data_type . declaration_specifiers

    INT       shift, and go to state 1
    FLOAT     shift, and go to state 2
    CHAR      shift, and go to state 3
    STRUCT    shift, and go to state 4
    UNION     shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    SIGNED    shift, and go to state 7
    VOID      shift, and go to state 8
    LONG      shift, and go to state 9
    SHORT     shift, and go to state 10

    INT       [reduce using rule 109 (declaration_specifiers)]
    FLOAT     [reduce using rule 109 (declaration_specifiers)]
    CHAR      [reduce using rule 109 (declaration_specifiers)]
    STRUCT    [reduce using rule 109 (declaration_specifiers)]
    UNION     [reduce using rule 109 (declaration_specifiers)]
    UNSIGNED  [reduce using rule 109 (declaration_specifiers)]
    SIGNED    [reduce using rule 109 (declaration_specifiers)]
    VOID      [reduce using rule 109 (declaration_specifiers)]
    LONG      [reduce using rule 109 (declaration_specifiers)]
    SHORT     [reduce using rule 109 (declaration_specifiers)]
    $default  reduce using rule 109 (declaration_specifiers)

    declaration_specifiers  go to state 26
    data_type               go to state 18


state 19

   27 function_definition: declarator . declaration_list compound_statement
   28                    | declarator . compound_statement
  129 declarator: declarator . '[' constant_expression ']'
  130           | declarator . '[' ']'
  131           | declarator . '(' parameter_type_list ')'
  132           | declarator . '(' identifier_list ')'
  133           | declarator . '(' ')'

    INT       shift, and go to state 1
    FLOAT     shift, and go to state 2
    CHAR      shift, and go to state 3
    STRUCT    shift, and go to state 4
    UNION     shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    SIGNED    shift, and go to state 7
    VOID      shift, and go to state 8
    LONG      shift, and go to state 9
    SHORT     shift, and go to state 10
    '{'       shift, and go to state 27
    '('       shift, and go to state 28
    '['       shift, and go to state 29

    compound_statement      go to state 30
    declaration_list        go to state 31
    declaration             go to state 32
    declaration_specifiers  go to state 33
    data_type               go to state 18


state 20

  128 declarator: '(' declarator . ')'
  129           | declarator . '[' constant_expression ']'
  130           | declarator . '[' ']'
  131           | declarator . '(' parameter_type_list ')'
  132           | declarator . '(' identifier_list ')'
  133           | declarator . '(' ')'

    '('  shift, and go to state 28
    ')'  shift, and go to state 34
    '['  shift, and go to state 29


state 21

    0 $accept: start_state $end .

    $default  accept


state 22

   30 start_state: start_state global_declaration .

    $default  reduce using rule 30 (start_state)


state 23

  108 declaration: declaration_specifiers init_declarator_list . ';'
  122 init_declarator_list: init_declarator_list . ',' init_declarator

    ';'  shift, and go to state 35
    ','  shift, and go to state 36


state 24

  121 init_declarator_list: init_declarator .

    $default  reduce using rule 121 (init_declarator_list)


state 25

   25 function_definition: declaration_specifiers declarator . declaration_list compound_statement
   26                    | declaration_specifiers declarator . compound_statement
  123 init_declarator: declarator .
  124                | declarator . '=' initializer
  129 declarator: declarator . '[' constant_expression ']'
  130           | declarator . '[' ']'
  131           | declarator . '(' parameter_type_list ')'
  132           | declarator . '(' identifier_list ')'
  133           | declarator . '(' ')'

    INT       shift, and go to state 1
    FLOAT     shift, and go to state 2
    CHAR      shift, and go to state 3
    STRUCT    shift, and go to state 4
    UNION     shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    SIGNED    shift, and go to state 7
    VOID      shift, and go to state 8
    LONG      shift, and go to state 9
    SHORT     shift, and go to state 10
    '{'       shift, and go to state 27
    '('       shift, and go to state 28
    '['       shift, and go to state 29
    '='       shift, and go to state 37

    $default  reduce using rule 123 (init_declarator)

    compound_statement      go to state 38
    declaration_list        go to state 39
    declaration             go to state 32
    declaration_specifiers  go to state 33
    data_type               go to state 18


state 26

  110 declaration_specifiers: data_type declaration_specifiers .

    $default  reduce using rule 110 (declaration_specifiers)


state 27

    6 compound_statement: '{' . '}'
    7                   | '{' . statement_list '}'
    8                   | '{' . declaration_list '}'
    9                   | '{' . declaration_list statement_list '}'

    IF              shift, and go to state 40
    WHILE           shift, and go to state 41
    FOR             shift, and go to state 42
    CONTINUE        shift, and go to state 43
    BREAK           shift, and go to state 44
    RETURN          shift, and go to state 45
    SIZEOF          shift, and go to state 46
    INC_OP          shift, and go to state 47
    DEC_OP          shift, and go to state 48
    INT             shift, and go to state 1
    FLOAT           shift, and go to state 2
    CHAR            shift, and go to state 3
    STRUCT          shift, and go to state 4
    UNION           shift, and go to state 5
    UNSIGNED        shift, and go to state 6
    SIGNED          shift, and go to state 7
    VOID            shift, and go to state 8
    LONG            shift, and go to state 9
    SHORT           shift, and go to state 10
    IDENTIFIER      shift, and go to state 49
    CONST_INT       shift, and go to state 50
    CONST_FLOAT     shift, and go to state 51
    STRING_LITERAL  shift, and go to state 52
    CONST_CHAR      shift, and go to state 53
    '+'             shift, and go to state 54
    '-'             shift, and go to state 55
    '*'             shift, and go to state 56
    '{'             shift, and go to state 27
    '}'             shift, and go to state 57
    ';'             shift, and go to state 58
    '('             shift, and go to state 59
    '&'             shift, and go to state 60
    '~'             shift, and go to state 61
    '!'             shift, and go to state 62

    statement                  go to state 63
    compound_statement         go to state 64
    declaration_list           go to state 65
    statement_list             go to state 66
    expression_statement       go to state 67
    selection_statement        go to state 68
    iteration_statement        go to state 69
    jump_statement             go to state 70
    primary_expression         go to state 71
    postfix_expression         go to state 72
    unary_expression           go to state 73
    unary_operator             go to state 74
    cast_expression            go to state 75
    multiplicative_expression  go to state 76
    additive_expression        go to state 77
    shift_expression           go to state 78
    relational_expression      go to state 79
    equality_expression        go to state 80
    and_expression             go to state 81
    exclusive_or_expression    go to state 82
    inclusive_or_expression    go to state 83
    logical_and_expression     go to state 84
    logical_or_expression      go to state 85
    conditional_expression     go to state 86
    assignment_expression      go to state 87
    expression                 go to state 88
    declaration                go to state 32
    declaration_specifiers     go to state 33
    data_type                  go to state 18


state 28

  131 declarator: declarator '(' . parameter_type_list ')'
  132           | declarator '(' . identifier_list ')'
  133           | declarator '(' . ')'

    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    STRUCT      shift, and go to state 4
    UNION       shift, and go to state 5
    UNSIGNED    shift, and go to state 6
    SIGNED      shift, and go to state 7
    VOID        shift, and go to state 8
    LONG        shift, and go to state 9
    SHORT       shift, and go to state 10
    IDENTIFIER  shift, and go to state 89
    ')'         shift, and go to state 90

    declaration_specifiers  go to state 91
    data_type               go to state 18
    parameter_type_list     go to state 92
    parameter_list          go to state 93
    parameter_declaration   go to state 94
    identifier_list         go to state 95


state 29

  129 declarator: declarator '[' . constant_expression ']'
  130           | declarator '[' . ']'

    SIZEOF          shift, and go to state 46
    INC_OP          shift, and go to state 47
    DEC_OP          shift, and go to state 48
    IDENTIFIER      shift, and go to state 49
    CONST_INT       shift, and go to state 50
    CONST_FLOAT     shift, and go to state 51
    STRING_LITERAL  shift, and go to state 52
    CONST_CHAR      shift, and go to state 53
    '+'             shift, and go to state 54
    '-'             shift, and go to state 55
    '*'             shift, and go to state 56
    '('             shift, and go to state 59
    ']'             shift, and go to state 96
    '&'             shift, and go to state 60
    '~'             shift, and go to state 61
    '!'             shift, and go to state 62

    primary_expression         go to state 71
    postfix_expression         go to state 72
    unary_expression           go to state 97
    unary_operator             go to state 74
    cast_expression            go to state 75
    multiplicative_expression  go to state 76
    additive_expression        go to state 77
    shift_expression           go to state 78
    relational_expression      go to state 79
    equality_expression        go to state 80
    and_expression             go to state 81
    exclusive_or_expression    go to state 82
    inclusive_or_expression    go to state 83
    logical_and_expression     go to state 84
    logical_or_expression      go to state 85
    conditional_expression     go to state 98
    constant_expression        go to state 99


state 30

   28 function_definition: declarator compound_statement .

    $default  reduce using rule 28 (function_definition)


state 31

   11 declaration_list: declaration_list . declaration
   27 function_definition: declarator declaration_list . compound_statement

    INT       shift, and go to state 1
    FLOAT     shift, and go to state 2
    CHAR      shift, and go to state 3
    STRUCT    shift, and go to state 4
    UNION     shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    SIGNED    shift, and go to state 7
    VOID      shift, and go to state 8
    LONG      shift, and go to state 9
    SHORT     shift, and go to state 10
    '{'       shift, and go to state 27

    compound_statement      go to state 100
    declaration             go to state 101
    declaration_specifiers  go to state 33
    data_type               go to state 18


state 32

   10 declaration_list: declaration .

    $default  reduce using rule 10 (declaration_list)


state 33

  108 declaration: declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 11
    '('         shift, and go to state 12

    init_declarator_list  go to state 23
    init_declarator       go to state 24
    declarator            go to state 102


state 34

  128 declarator: '(' declarator ')' .

    $default  reduce using rule 128 (declarator)


state 35

  108 declaration: declaration_specifiers init_declarator_list ';' .

    $default  reduce using rule 108 (declaration)


state 36

  122 init_declarator_list: init_declarator_list ',' . init_declarator

    IDENTIFIER  shift, and go to state 11
    '('         shift, and go to state 12

    init_declarator  go to state 103
    declarator       go to state 102


state 37

  124 init_declarator: declarator '=' . initializer

    SIZEOF          shift, and go to state 46
    INC_OP          shift, and go to state 47
    DEC_OP          shift, and go to state 48
    IDENTIFIER      shift, and go to state 49
    CONST_INT       shift, and go to state 50
    CONST_FLOAT     shift, and go to state 51
    STRING_LITERAL  shift, and go to state 52
    CONST_CHAR      shift, and go to state 53
    '+'             shift, and go to state 54
    '-'             shift, and go to state 55
    '*'             shift, and go to state 56
    '{'             shift, and go to state 104
    '('             shift, and go to state 59
    '&'             shift, and go to state 60
    '~'             shift, and go to state 61
    '!'             shift, and go to state 62

    primary_expression         go to state 71
    postfix_expression         go to state 72
    unary_expression           go to state 73
    unary_operator             go to state 74
    cast_expression            go to state 75
    multiplicative_expression  go to state 76
    additive_expression        go to state 77
    shift_expression           go to state 78
    relational_expression      go to state 79
    equality_expression        go to state 80
    and_expression             go to state 81
    exclusive_or_expression    go to state 82
    inclusive_or_expression    go to state 83
    logical_and_expression     go to state 84
    logical_or_expression      go to state 85
    conditional_expression     go to state 86
    assignment_expression      go to state 105
    initializer                go to state 106


state 38

   26 function_definition: declaration_specifiers declarator compound_statement .

    $default  reduce using rule 26 (function_definition)


state 39
